[package]
name = "ryna-ffi"
version = "0.1.0"
description = "FFI interface for the Ryna Programming Language"
keywords = ["programming-language", "interpreter"]
categories = ["command-line-utilities", "compilers"]
documentation = "https://gabie-of-the-bo.github.io/Ryna-Language/"
homepage = "https://gabie-of-the-bo.github.io/Ryna-Language/"
repository = "https://github.com/Gabie-of-the-Bo/Ryna-Language"
authors = ["Javier Castillo <javier.castillo.dev@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
name = "rynaffi"
path = "src/lib.rs"

[dependencies]
